--- a/src/app/clusters/time-format-localization-server/tests/BUILD.gn
+++ b/src/app/clusters/time-format-localization-server/tests/BUILD.gn
@@ -11,21 +11,28 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 import("//build_overrides/build.gni")
 import("//build_overrides/chip.gni")
+import("//build_overrides/pigweed.gni")
 
-source_set("time-format-localization-server") {
-  sources = [
-    "time-format-localization-cluster.cpp",
-    "time-format-localization-cluster.h",
-    "time-format-localization-logic.cpp",
-    "time-format-localization-logic.h",
+import("${chip_root}/build/chip/chip_test_suite.gni")
+
+chip_test_suite("tests") {
+  output_name = "libTestTimeFormatLocalizationCluster"
+
+  test_sources = [
+    "SampleDeviceProvider.cpp",
+    "TestTimeFormatLocalizationCluster.cpp",
   ]
 
+  sources = []
+
+  cflags = [ "-Wconversion" ]
+
   public_deps = [
-    "${chip_root}/src/app/data-model-provider",
-    "${chip_root}/src/app/server",
-    "${chip_root}/src/app/server-cluster",
-    "${chip_root}/zzz_generated/app-common/clusters/TimeFormatLocalization",
+    "${chip_root}/src/app/clusters/testing",
+    "${chip_root}/src/app/clusters/time-format-localization-server",
+    "${chip_root}/src/lib/support",
   ]
 }
