--- a/.github/workflows/check-data-model-directory-updates.yaml
+++ b/.github/workflows/check-data-model-directory-updates.yaml
@@ -59,11 +59,11 @@ jobs:
       - name: Ensure git works in current working directory
         run: git config --global --add safe.directory `pwd`
       - name: Check for uncommitted changes
-        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only')
+        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
         run: |
           git diff --exit-code HEAD -- src/python_testing/matter_testing_infrastructure/data_model_xmls.gni
       - name: Skip check for uncommitted changes due to label
-        if: (contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only')
+        if: (contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
         run: |
           echo skipping data model checks due to label
           exit 0
