--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -47,6 +47,13 @@ jobs:
         run: |
           scripts/run_in_build_env.sh './scripts/build_python.sh --install_virtual_env out/venv'
       
+      - name: Run mypy validation (ChipDeviceCtrl.py with relaxed checks)
+        run: |
+          ./scripts/run_in_python_env.sh out/venv "mypy \
+            --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
+            --ignore-missing-imports \
+            src/controller/python/chip/ChipDeviceCtrl.py"
+      
       - name: Run mypy validation
         run: |
           # List the directory to debug the file structure
@@ -56,7 +63,6 @@ jobs:
           # Eventually we should just check all files in the chip/testing directory
           
           ./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
-            src/controller/python/chip/ChipDeviceCtrl.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/apps.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/tasks.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/taglist_and_topology_test.py \
