--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           scripts/run_in_build_env.sh './scripts/build_python.sh --install_virtual_env out/venv'
       
-      - name: Run mypy validation (ChipDeviceCtrl.py with relaxed checks)
+      - name: Run mypy validation (ChipDeviceCtrl.py)
         run: |
           ./scripts/run_in_python_env.sh out/venv "mypy \
             --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
