--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           ./scripts/run_in_python_env.sh out/venv "mypy \
             --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
-            --ignore-missing-imports \
+            --follow-imports=skip \
             src/controller/python/chip/ChipDeviceCtrl.py"
       
       - name: Run mypy validation
