--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -51,8 +51,8 @@ jobs:
         run: |
           ./scripts/run_in_python_env.sh out/venv "mypy \
             --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
-            --follow-imports=skip \
-            src/controller/python/chip/ChipDeviceCtrl.py"
+            --ignore-missing-imports \
+            src/controller/python/chip/ChipDeviceCtrl.py" | grep 'ChipDeviceCtrl.py'
       
       - name: Run mypy validation
         run: |
