--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -52,7 +52,7 @@ jobs:
           ./scripts/run_in_python_env.sh out/venv "mypy \
             --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
             --strict \
-            src/controller/python/chip/ChipDeviceCtrl.py"
+            src/controller/python/chip/ChipDeviceCtrl.py" | grep 'ChipDeviceCtrl.py'
       
       - name: Run mypy validation
         run: |
