--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -49,9 +49,14 @@ jobs:
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
         run: |
-          ./scripts/run_in_python_env.sh out/venv "mypy \
-            --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
-            src/controller/python/chip/ChipDeviceCtrl.py" | grep 'ChipDeviceCtrl.py'
+          ERRORS=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" | grep -c 'ChipDeviceCtrl.py')
+          if [ "$ERRORS" -ne 0 ]; then
+            echo "Mypy found $ERRORS errors in ChipDeviceCtrl.py"
+            ./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" | grep 'ChipDeviceCtrl.py'
+            exit 1
+          else
+            echo "No mypy errors found in ChipDeviceCtrl.py"
+          fi
       
       - name: Run mypy validation
         run: |
