Updated: Added mypy validation workflow for ChipDeviceCtrl with # type: ignore v10.

--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -49,7 +49,7 @@ jobs:
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
         run: |
-          ERRORS=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" | grep -c 'ChipDeviceCtrl.py')
+          ERRORS=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" | grep -c 'ChipDeviceCtrl.py:.*error:')
           if [ "$ERRORS" -ne 0 ]; then
             echo "Mypy found $ERRORS errors in ChipDeviceCtrl.py"
             ./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" | grep 'ChipDeviceCtrl.py'
