--- a/src/app/clusters/thermostat-server/app_config_dependent_sources.gni
+++ b/src/app/clusters/thermostat-server/app_config_dependent_sources.gni
@@ -14,6 +14,8 @@
 app_config_dependent_sources = [
   "PresetStructWithOwnedMembers.cpp",
   "PresetStructWithOwnedMembers.h",
+  "ThermostatSuggestionStructWithOwnedMembers.cpp",
+  "ThermostatSuggestionStructWithOwnedMembers.h",
   "thermostat-delegate.h",
   "thermostat-server-atomic.cpp",
   "thermostat-server-presets.cpp",
@@ -21,6 +23,4 @@ app_config_dependent_sources = [
   "thermostat-server-suggestions.cpp",
   "thermostat-server.cpp",
   "thermostat-server.h",
-  "ThermostatSuggestionStructWithOwnedMembers.cpp",
-  "ThermostatSuggestionStructWithOwnedMembers.h"
 ]
