Add Implementation for TC_PAVST_2_3.py
Signed-off-by: Raveendra Karu <r.karu@samsung.com>

--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -142,6 +142,10 @@ not_automated:
       reason:
           Depends on PushAV cluster. Will be enabled once local tests are fully
           verified.
+    - name: TC_PAVST_2_3.py
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
     - name: TC_PAVST_2_9.py
       reason:
           Depends on PushAV cluster. Will be enabled once local tests are fully
