Fix PICS code numbering for Thermostat Suggestions

--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -6614,7 +6614,7 @@ PICS:
     #   id: TSTAT.S.F09
 
     - label: "Supports thermostat suggestions"
-      id: TSTAT.S.F10
+      id: TSTAT.S.F0a
 
     #
     # server / manually
