--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -48,6 +48,7 @@ jobs:
           scripts/run_in_build_env.sh './scripts/build_python.sh --install_virtual_env out/venv'
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
+        shell: bash
         run: |
           OUTPUT=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
 
