--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -51,10 +51,7 @@ jobs:
         shell: bash
         run: |
           OUTPUT=$(./scripts/run_in_python_env.sh out/venv \
-            "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
-                  --follow-imports=skip \
-                  --ignore-missing-imports \
-                  src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
+            "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
 
           ERRORS=$(echo "$OUTPUT" | grep -c '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:')
 
