--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -51,15 +51,16 @@ jobs:
         shell: bash
         run: |
           OUTPUT=$(./scripts/run_in_python_env.sh out/venv \
-            "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
+            "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
+            src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
 
-          echo "$OUTPUT"
+          ERRORS=$(echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:')
 
-          ERRORS=$(echo "$OUTPUT" | grep -E '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]+: error:' | wc -l)
+          COUNT=$(echo "$ERRORS" | wc -l)
 
-          if [ "$ERRORS" -ne 0 ]; then
-            echo "Mypy found $ERRORS error(s) in ChipDeviceCtrl.py"
-            echo "$OUTPUT" | grep -E '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]+: error:'
+          if [ "$COUNT" -ne 0 ]; then
+            echo "Mypy found $COUNT error(s) in ChipDeviceCtrl.py"
+            echo "$ERRORS"
             exit 1
           else
             echo "No mypy errors found in ChipDeviceCtrl.py"
