--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -50,20 +50,15 @@ jobs:
       - name: Run mypy validation (ChipDeviceCtrl.py)
         shell: bash
         run: |
-          OUTPUT=$(./scripts/run_in_python_env.sh out/venv \
-            "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
-            src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
-
-          ERRORS=$(echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:')
-
-          COUNT=$(echo "$ERRORS" | wc -l)
-
-          if [ "$COUNT" -ne 0 ]; then
-            echo "Mypy found $COUNT error(s) in ChipDeviceCtrl.py"
-            echo "$ERRORS"
-            exit 1
-          else
-            echo "No mypy errors found in ChipDeviceCtrl.py"
+          OUTPUT=$(mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py 2>&1); \
+          ERRORS=$(echo "$OUTPUT" | grep -c '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'); \
+          if [ "$ERRORS" -ne 0 ]; then \
+            echo "Mypy found $ERRORS error(s) in ChipDeviceCtrl.py"; \
+            echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'; \
+            exit 1; \
+          else \
+            echo "No mypy errors found in ChipDeviceCtrl.py"; \
+            exit 0; \
           fi
       
       - name: Run mypy validation
