--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -23,6 +23,8 @@ import("${chip_root}/build/chip/buildconfig_header.gni")
 
 static_library("chip_webrtc") {
   sources = [
+    "${chip_root}/src/app/clusters/webrtc-transport-provider-server/webrtc-transport-provider-server.cpp",
+    "${chip_root}/src/app/clusters/webrtc-transport-provider-server/webrtc-transport-provider-server.h",
     "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-server.cpp",
     "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-server.h",
     "${chip_root}/src/controller/python/chip/native/PyChipError.h",
@@ -30,6 +32,8 @@ static_library("chip_webrtc") {
     "WebRTCClient.h",
     "WebRTCTransportProviderClient.cpp",
     "WebRTCTransportProviderClient.h",
+    "WebRTCTransportProviderManager.cpp",
+    "WebRTCTransportProviderManager.h",
     "WebRTCTransportRequestorManager.cpp",
     "WebRTCTransportRequestorManager.h",
   ]
