--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -48,19 +48,17 @@ jobs:
           scripts/run_in_build_env.sh './scripts/build_python.sh --install_virtual_env out/venv'
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
-        shell: bash
         run: |
-          OUTPUT=$(mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py 2>&1); \
-          ERRORS=$(echo "$OUTPUT" | grep -c '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'); \
-          if [ "$ERRORS" -ne 0 ]; then \
-            echo "Mypy found $ERRORS error(s) in ChipDeviceCtrl.py"; \
-            echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'; \
-            exit 1; \
-          else \
-            echo "No mypy errors found in ChipDeviceCtrl.py"; \
-            exit 0; \
+          OUTPUT=$(mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini src/controller/python/chip/ChipDeviceCtrl.py 2>&1)
+          ERRORS=$(echo "$OUTPUT" | grep -c '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:')
+          if [ "$ERRORS" -ne 0 ]; then
+            echo "Mypy found $ERRORS error(s) in ChipDeviceCtrl.py"
+            echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'
+            exit 1
+          else
+            echo "No mypy errors found in ChipDeviceCtrl.py"
           fi
-      
+            
       - name: Run mypy validation
         run: |
           # List the directory to debug the file structure
