--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -50,11 +50,14 @@ jobs:
       - name: Run mypy validation (ChipDeviceCtrl.py)
         run: |
           OUTPUT=$(mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini --follow-imports=skip src/controller/python/chip/ChipDeviceCtrl.py 2>&1)
+
           echo "$OUTPUT"
-          ERRORS=$(echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:' | wc -l || true)
+
+          ERRORS=$(echo "$OUTPUT" | grep -E '^[^:]+:[0-9]+: error:' | wc -l)
+
           if [ "$ERRORS" -gt 0 ]; then
             echo "Mypy found $ERRORS error(s) in ChipDeviceCtrl.py"
-            echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'
+            echo "$OUTPUT" | grep -E '^[^:]+:[0-9]+: error:'
             exit 1
           else
             echo "No mypy errors found in ChipDeviceCtrl.py"
