Positive Testing: mypy validation workflow for ChipDeviceCtrl.

--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -49,7 +49,9 @@ jobs:
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
         run: |
-          OUTPUT=$(mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini --follow-imports=skip src/controller/python/chip/ChipDeviceCtrl.py 2>&1)
+          OUTPUT=$(./scripts/run_in_python_env.sh out/venv \
+            mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini \
+                --follow-imports=skip src/controller/python/chip/ChipDeviceCtrl.py 2>&1)
 
           echo "$OUTPUT"
 
