--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -49,7 +49,7 @@ jobs:
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
         run: |
-          OUTPUT=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini --follow-imports=skip src/controller/python/chip/ChipDeviceCtrl.py" 2>&1 || true)
+          OUTPUT=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini --follow-imports=skip src/controller/python/chip/ChipDeviceCtrl.py" 2>&1)
 
           echo "$OUTPUT"
 
@@ -61,6 +61,7 @@ jobs:
             exit 1
           else
             echo "No mypy errors found in ChipDeviceCtrl.py"
+            exit 0
           fi
 
             
