Positive Testing: mypy validation workflow for ChipDeviceCtrl.

--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -48,19 +48,26 @@ jobs:
           scripts/run_in_build_env.sh './scripts/build_python.sh --install_virtual_env out/venv'
       
       - name: Run mypy validation (ChipDeviceCtrl.py)
+        shell: bash
         run: |
+          set +e
+
           OUTPUT=$(./scripts/run_in_python_env.sh out/venv "mypy --config-file=src/python_testing/matter_testing_infrastructure/mypy.ini --follow-imports=skip src/controller/python/chip/ChipDeviceCtrl.py" 2>&1)
+          STATUS=$?
 
           echo "$OUTPUT"
 
           ERRORS=$(echo "$OUTPUT" | grep -c '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:')
 
-          if [ "$ERRORS" -ne 0 ]; then
+          if [ "$STATUS" -eq 0 ]; then
+            echo "No mypy errors found in ChipDeviceCtrl.py"
+            exit 0
+          elif [ "$ERRORS" -gt 0 ]; then
             echo "Mypy found $ERRORS error(s) in ChipDeviceCtrl.py"
             echo "$OUTPUT" | grep '^src/controller/python/chip/ChipDeviceCtrl.py:[0-9]\+: error:'
             exit 1
           else
-            echo "No mypy errors found in ChipDeviceCtrl.py"
+            echo "Mypy exited with error but no errors in ChipDeviceCtrl.py"
             exit 0
           fi
 
