--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -134,6 +134,13 @@ not_automated:
       reason: Helper methods for WebRTC TCs, not a standalone test.
     - name: TC_CHIMETestBase.py
       reason: Shared code for the Chime Cluster, not a standalone test.
+    - name: TC_WEBRTCPTestBase.py
+      reason:
+          Shared code for the WebRTC Provider Cluster, not a standalone test.
+    - name: TC_WEBRTCR_2_3.py
+      reason: Camera Controller App does not support stream allocation requests
+    - name: TC_WEBRTCR_2_4.py
+      reason: Camera Controller App does not support stream allocation requests
     - name: TC_PAVST_2_1.py
       reason:
           Depends on PushAV cluster. Will be enabled once local tests are fully
