--- a/src/app/common/templates/config-data.yaml
+++ b/src/app/common/templates/config-data.yaml
@@ -65,6 +65,7 @@ CommandHandlerInterfaceOnlyClusters:
     - Closure Control
     - Closure Dimension
     - OTA Software Update Provider
+    - Joint Fabric Administrator
 
 # We need a more configurable way of deciding which clusters have which init functions....
 # See https://github.com/project-chip/connectedhomeip/issues/4369
