--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -138,6 +138,22 @@ not_automated:
       reason: Camera Controller App does not support stream allocation requests
     - name: TC_WEBRTCR_2_4.py
       reason: Camera Controller App does not support stream allocation requests
+    - name: TC_PAVST_2_1.py
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
+    - name: TC_PAVST_2_2.py
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
+    - name: TC_PAVST_2_3.py
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
+    - name: TC_PAVST_2_9.py
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
