--- a/src/app/tests/suites/certification/Test_TC_LWM_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_LWM_2_1.yaml
@@ -119,18 +119,73 @@ tests:
           values:
               - name: "Status"
                 constraints:
-                    anyOf:
-                        [
+                    anyOf: [
                             0x02, # GenericFailure
                             0x03, # InvalidInMode
-                            0x80, 0x81, 0x82, 0x83, 0x84, 0x85, 0x86, 0x87,
-                            0x88, 0x89, 0x8A, 0x8B, 0x8C, 0x8D, 0x8E, 0x8F,
-                            0x90, 0x91, 0x92, 0x93, 0x94, 0x95, 0x96, 0x97,
-                            0x98, 0x99, 0x9A, 0x9B, 0x9C, 0x9D, 0x9E, 0x9F,
-                            0xA0, 0xA1, 0xA2, 0xA3, 0xA4, 0xA5, 0xA6, 0xA7,
-                            0xA8, 0xA9, 0xAA, 0xAB, 0xAC, 0xAD, 0xAE, 0xAF,
-                            0xB0, 0xB1, 0xB2, 0xB3, 0xB4, 0xB5, 0xB6, 0xB7,
-                            0xB8, 0xB9, 0xBA, 0xBB, 0xBC, 0xBD, 0xBE, 0xBF
+                            0x80,
+                            0x81,
+                            0x82,
+                            0x83,
+                            0x84,
+                            0x85,
+                            0x86,
+                            0x87,
+                            0x88,
+                            0x89,
+                            0x8A,
+                            0x8B,
+                            0x8C,
+                            0x8D,
+                            0x8E,
+                            0x8F,
+                            0x90,
+                            0x91,
+                            0x92,
+                            0x93,
+                            0x94,
+                            0x95,
+                            0x96,
+                            0x97,
+                            0x98,
+                            0x99,
+                            0x9A,
+                            0x9B,
+                            0x9C,
+                            0x9D,
+                            0x9E,
+                            0x9F,
+                            0xA0,
+                            0xA1,
+                            0xA2,
+                            0xA3,
+                            0xA4,
+                            0xA5,
+                            0xA6,
+                            0xA7,
+                            0xA8,
+                            0xA9,
+                            0xAA,
+                            0xAB,
+                            0xAC,
+                            0xAD,
+                            0xAE,
+                            0xAF,
+                            0xB0,
+                            0xB1,
+                            0xB2,
+                            0xB3,
+                            0xB4,
+                            0xB5,
+                            0xB6,
+                            0xB7,
+                            0xB8,
+                            0xB9,
+                            0xBA,
+                            0xBB,
+                            0xBC,
+                            0xBD,
+                            0xBE,
+                            0xBF
                         ]
               - name: "StatusText"
                 constraints:
