Automation for TC-TSTAT-4.3 (#39904)
* Before modifying TSTAT_4_2 into 4_3

* Steps to match new numbering for Test Plan

* Empty shell for the steps and PICS for all steps

* WIP on all steps

* Complete Steps for TC_TSTAT_4_3.py

* Fixed comments on PR

* Updated PICS values

* Revert changes made to unrelated file

* Fixes for comments on PR

* Fix PICS code numbering for Thermostat Suggestions

* Fixes from CI suggestions

* Formatting changes

* Restyled by autopep8

* Restyled by isort

* Update src/python_testing/TC_TSTAT_4_3.py

Co-authored-by: fesseha-eve <88329315+fessehaeve@users.noreply.github.com>

* Minor changes from PR feedback

* Bug fixes after script testing

* minor change

* Style changes

* Update TC_TSTAT_4_3.py

---------

Co-authored-by: cjandhyala <68604034+cjandhyala@users.noreply.github.com>
Co-authored-by: Restyled.io <commits@restyled.io>
Co-authored-by: fesseha-eve <88329315+fessehaeve@users.noreply.github.com>
Co-authored-by: Nivi Sarkar <55898241+nivi-apple@users.noreply.github.com>

--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -6610,6 +6610,12 @@ PICS:
     - label: "Supports setpoint presets"
       id: TSTAT.S.F08
 
+    # - label: "Supports events"
+    #   id: TSTAT.S.F09
+
+    - label: "Supports thermostat suggestions"
+      id: TSTAT.S.F0a
+
     #
     # server / manually
     #
