[NXP][cmake][examples][mcxw7x] Fix low-power app flavors not operating in low-power mode
The low-power build configurations of the Matter apps for MCXW7x
platforms were not operating in low-power mode due to the fact that
an incorrect configuration of build flags was being used.

Signed-off-by: Marian Chereji <marian.chereji@nxp.com>

--- a/examples/contact-sensor-app/nxp/CMakeLists.txt
+++ b/examples/contact-sensor-app/nxp/CMakeLists.txt
@@ -99,6 +99,13 @@ if(CONFIG_CHIP_NXP_PLATFORM_MCXW71 OR CONFIG_CHIP_NXP_PLATFORM_MCXW72)
     )
 endif()
 
+if(CONFIG_CHIP_NXP_PLATFORM_MCXW72 AND CONFIG_NXP_USE_LOW_POWER)
+    target_sources(app
+        PRIVATE
+        ${NXP_MATTER_SUPPORT_DIR}/examples/platform/common/low_power/freertos_lp_hooks.c
+    )
+endif()
+
 if(CONFIG_CHIP_WIFI AND CONFIG_NET_L2_OPENTHREAD)
     message(FATAL_ERROR "WiFi + Thread (Border Router) configuration is not supported in this application.")
 else()
