Address review comments
- do not purge when building docker images
- declare all local vars with `local`
- convert all local var names to lowercase
- fix wrong use of ${@} in dowload()

Signed-off-by: Maciej Grela <m.grela@samsung.com>

--- a/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
+++ b/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION=1
-FROM ghcr.io/project-chip/chip-build:${VERSION}
+FROM ghcr.io/enkiusz/chip-build:${VERSION}
 LABEL org.opencontainers.image.source https://github.com/project-chip/connectedhomeip
 
 # ------------------------------------------------------------------------------
@@ -31,7 +31,6 @@ RUN set -x \
     --tizen-sdk-path $TIZEN_SDK_ROOT \
     --tizen-sdk-data-path /home/ubuntu/tizen-sdk-data \
     --tizen-version $TIZEN_VERSION  \
-    --purge-pkg-cache \
     --pkg-cache-path /tmp/tizen-pkg/$TIZEN_VERSION \
     --override-secret-tool \
     && rm -rf /tmp/tizen-pkg \
