Use proper base image in chip-build-tizen
Signed-off-by: Maciej Grela <m.grela@samsung.com>

--- a/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
+++ b/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION=1
-FROM ghcr.io/enkiusz/chip-build:${VERSION}
+FROM ghcr.io/project-chip/chip-build:${VERSION}
 LABEL org.opencontainers.image.source https://github.com/project-chip/connectedhomeip
 
 # ------------------------------------------------------------------------------
