Finally enabled the following PICs in both ZAP tool for lock-app and ci-pics-values DRLK.S.A0004=1 DRLK.S.A0005=1 DRLK.S.A0006=1 DRLK.S.A0027=1 DRLK.S.A002a=1 DRLK.S.A002c=1 and left the following PICs disabled DRLK.S.A0022=0 DRLK.S.A0028=0 DRLK.S.A0032=0 DRLK.S.A0035=0 DRLK.S.M.LocalProgrammingFeaturesAttributeWritable=0

--- a/src/app/tests/suites/certification/Test_TC_DRLK_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DRLK_2_1.yaml
@@ -1273,7 +1273,7 @@ tests:
     - label:
           "Step 30g: TH sends a write message to change any one of the bits of
           the LocalProgrammingFeatures."
-      PICS: DRLK.S.A002c
+      PICS: DRLK.S.A002c && DRLK.S.M.LocalProgrammingFeaturesAttributeWritable
       command: "writeAttribute"
       attribute: "LocalProgrammingFeatures"
       arguments:
