--- a/examples/lighting-app/stm32/STM32WBA651-DK1/BUILD.gn
+++ b/examples/lighting-app/stm32/STM32WBA651-DK1/BUILD.gn
@@ -78,12 +78,12 @@ stm32_sdk("sdk") {
 stm32_executable("lighting_app") {
   deps = []
 
-    output_name = "chip-stm32-lighting-example.elf"
+    output_name = "${stm32_board}-lighting.elf"
     include_dirs = [
       "${chip_root}/examples/platform/stm32/config_files/STM32WBA6/",
       "${chip_root}/examples/platform/stm32/common/STM32WBA651-DK1/Inc",
-      "${chip_root}/examples/platform/stm32/common/STM32WBA651-DK1/STM32_WPAN/TARGET",
-      "${chip_root}/examples/platform/stm32/common/STM32WBA651-DK1/STM32_WPAN/APP",
+      "${chip_root}/examples/platform/stm32/common/STM32WBA651-DK1/STM32_WPAN/Target",
+      "${chip_root}/examples/platform/stm32/common/STM32WBA651-DK1/STM32_WPAN/App",
       "${chip_root}/src/include/",
     ]
     defines = []
