Restyled by prettier-yaml

--- a/src/app/tests/suites/certification/Test_TC_DD_3_23.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DD_3_23.yaml
@@ -12,8 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name:
-    3.3.23 [TC-DD-3.23] NFC-based commissioning [DUT as Commissionee]
+name: 3.3.23 [TC-DD-3.23] NFC-based commissioning [DUT as Commissionee]
 
 PICS:
     - MCORE.ROLE.COMMISSIONER
